Update SmartMealView.java