@@ -17,17 +17,11 @@ import com.vaadin.flow.router.Route;
 import com.vaadin.flow.spring.annotation.SpringComponent;
 import com.vaadin.flow.spring.annotation.UIScope;
 
-// Neue Imports für Markdown 
-import org.commonmark.node.Node;
-import org.commonmark.parser.Parser;
-import org.commonmark.renderer.html.HtmlRenderer;
-
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
-import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
+import java.sql.SQLOutput;
 
 @SpringComponent
 @UIScope
@@ -38,7 +32,7 @@ public class SmartMealView extends HorizontalLayout {
     public SmartMealView() {
         setSizeFull();
 
-        
+        // Linke Navigationsleiste
         VerticalLayout navBar = new VerticalLayout();
         navBar.addClassName("navbar");
         navBar.setWidth("20%");
@@ -46,176 +40,244 @@ public class SmartMealView extends HorizontalLayout {
         navBar.setSpacing(true);
         navBar.setDefaultHorizontalComponentAlignment(FlexComponent.Alignment.START);
 
+        // Navbar-Inhalt
+        Image img = new Image("fit.png", "logo");
+        img.setWidth("150px");
+        img.setHeight("80px");
+
+
         Div logoDiv = new Div();
         logoDiv.setWidth("250px");
         logoDiv.setHeight("100px");
         logoDiv.getStyle().set("background-image", "url('logo2.png')");
-        logoDiv.getStyle().set("background-size", "contain");
+        logoDiv.getStyle().set("background-size", "contain");  // passt Bild an Div an
         logoDiv.getStyle().set("background-repeat", "no-repeat");
         logoDiv.getStyle().set("background-position", "center");
 
-        Div spacer = new Div();
-        spacer.setHeight("100px");
 
-        // Links und Icons
+
+        Div spacer = new Div();
+        spacer.setHeight("100px");// Abstand wie 5 Leerzeilen
+
+
+
+
         Anchor impressumLink = new Anchor("https://www.fit.fraunhofer.de/de/jobs.html", "Impressum");
-        impressumLink.setTarget("_blank");
+        impressumLink.setTarget("_blank"); // öffnet in neuem Tab
+
         Anchor datenschutzLink = new Anchor("https://www.fit.fraunhofer.de/de/jobs.html", "Datenschutzinformation");
         datenschutzLink.setTarget("_blank");
+
         Anchor barrierefreiheitLink = new Anchor("https://www.fit.fraunhofer.de/de/jobs.html", "Barrierefreiheitserklärung");
         barrierefreiheitLink.setTarget("_blank");
 
-        HorizontalLayout barriereLayout = new HorizontalLayout(new Icon(VaadinIcon.CHECK_CIRCLE), barrierefreiheitLink);
+
+        // Icons
+        Icon checkIcon = new Icon(VaadinIcon.CHECK_CIRCLE);
+        checkIcon.setSize("14px"); // Größe anpassen
+        checkIcon.getStyle().set("margin-left", "5px");
+        HorizontalLayout barriereLayout = new HorizontalLayout( checkIcon , barrierefreiheitLink);
         barriereLayout.setAlignItems(FlexComponent.Alignment.CENTER);
-        HorizontalLayout datenschutzLayout = new HorizontalLayout(new Icon(VaadinIcon.OPEN_BOOK), datenschutzLink);
+
+        Icon bookIcon = new Icon(VaadinIcon.OPEN_BOOK);
+        bookIcon.setSize("14px");
+        bookIcon.getStyle().set("margin-left", "5px");
+        HorizontalLayout datenschutzLayout = new HorizontalLayout(bookIcon , datenschutzLink);
         datenschutzLayout.setAlignItems(FlexComponent.Alignment.CENTER);
-        HorizontalLayout impressumLayout = new HorizontalLayout(new Icon(VaadinIcon.CLOCK), impressumLink);
+
+        Icon caretIcon =  new Icon(VaadinIcon.CLOCK);
+        caretIcon.setSize("14px");
+        caretIcon.getStyle().set("margin-left", "5px");
+        HorizontalLayout impressumLayout = new HorizontalLayout(caretIcon ,impressumLink);
         impressumLayout.setAlignItems(FlexComponent.Alignment.CENTER);
+
 
         Div chatLabel = new Div();
         chatLabel.setText("Chat-Bot");
-        chatLabel.getStyle().set("margin-top", "auto").set("font-size", "24px").set("font-weight", "bold")
-                .set("color", "white").set("font-style", "italic");
+        chatLabel.getStyle().set("margin-top", "auto"); // nach unten schieben
+        chatLabel.getStyle().set("font-size", "24px");
+        chatLabel.getStyle().set("font-weight", "bold");
+        chatLabel.getStyle().set("color", "white");
+        chatLabel.getStyle().set("font-style", "italic");
 
-        navBar.add(logoDiv, spacer, impressumLayout, datenschutzLayout, barriereLayout, chatLabel);
 
-        // --- Hauptbereich ---
+
+        navBar.add(logoDiv ,spacer , impressumLayout,  datenschutzLayout,  barriereLayout , chatLabel );
+
+        // Hauptbereich für Chat
         VerticalLayout mainLayout = new VerticalLayout();
         mainLayout.setSizeFull();
         mainLayout.setPadding(false);
         mainLayout.setSpacing(false);
 
-        // Header
+        // Header mit Buttons
         HorizontalLayout header = new HorizontalLayout();
         header.addClassName("chat-header");
         header.setWidthFull();
 
         Button chatbotButton = new Button("Chat-Bot");
         chatbotButton.addClassName("button-chatbot");
-        chatbotButton.addClassName("button-selected"); // Markierung als aktiv
 
-        Button ragBotButton = new Button("RAG-Bot", e -> getUI().ifPresent(ui -> ui.navigate("ragBot")));
+
+
+
+        Button ragBotButton = new Button("RAG-Bot");
         ragBotButton.addClassName("button-ragbot");
+
 
         header.add(chatbotButton, ragBotButton);
         header.setAlignItems(FlexComponent.Alignment.CENTER);
 
-        H1 chatTitle = new H1("Dieser Chat-Bot beantwortet Fragen basierend auf der OpenAI-Datenbank");
+        ragBotButton.addClickListener(event -> {
+            getUI().ifPresent(ui -> ui.navigate("ragBot")); // Navigiert zur neuen View
+        });
+
+
+
+        // Titel im Chatbereich
+        H1 chatTitle = new H1(" Dieser Chat-bot beantwortet Fragen basierend auf der OpenAI-Datenbank");
         chatTitle.addClassName("chat-title");
 
-        // --- Nachrichtenbereich (Optimiert wie RagBot) ---
+        // Bereich für Nachrichten (dynamisch)
         Div messageArea = new Div();
-        messageArea.addClassName("chat-area"); // Nutzt die CSS Klasse aus shared-styles.css
         messageArea.setWidthFull();
+        //messageArea.getStyle().set("max-height", "70vh"); // wächst bis max. 70% der Seite
+        messageArea.getStyle().set("overflow-y", "auto"); // Scrollbar nur wenn nötig
+        messageArea.getStyle().set("padding", "10px");
+        messageArea.getStyle().set("background-color", "#FFFFFF");
+        messageArea.setText("\uD83E\uDD16 Hier steht die Antwort des LLM...");
+        messageArea.getStyle().set("font-style", "italic");
 
-        Div placeholder = new Div();
-        placeholder.setText("\uD83E\uDD16 Hier steht die Antwort des LLM...");
-        placeholder.getStyle().set("font-style", "italic");
-        messageArea.add(placeholder);
 
-        // --- Eingabebereich ---
+        // Eingabefeld (mehrzeilig) und Senden Button
         HorizontalLayout inputLayout = new HorizontalLayout();
-        inputLayout.addClassName("input-layout");
         inputLayout.setWidthFull();
-
         TextArea inputField = new TextArea();
         inputField.setPlaceholder("Wie kann ich dir weiterhelfen?");
         inputField.addClassName("input-field");
         inputField.setWidthFull();
-        inputField.getStyle().set("resize", "none");
+        inputField.getStyle().set("resize", "none");  // verhindert manuelles Ändern
 
-        // JS für dynamische Höhe
+        // Dynamisches Wachsen JavaScript Code
         inputField.getElement().executeJs(
                 "this.style.height='auto';" +
-                "this.style.overflowY='hidden';" +
-                "this.addEventListener('input', function() {" +
-                "  this.style.height='auto';" +
-                "  this.style.height=(this.scrollHeight) + 'px';" +
-                "});"
+                        "this.style.overflowY='hidden';" +
+                        "this.addEventListener('input', function() {" +
+                        "  this.style.height='auto';" +               // zurücksetzen
+                        "  this.style.height=(this.scrollHeight) + 'px';" + // an Inhalt anpassen
+                        "});"
         );
+
 
         Button sendButton = new Button(new Icon(VaadinIcon.PAPERPLANE));
         sendButton.addClassName("send-button");
 
+        //Micro
         Button micButton = new Button(new Icon(VaadinIcon.MICROPHONE));
         micButton.addClassName("mic-button");
+        micButton.getElement().setAttribute("title", "Spracheingabe starten");
         micButton.addClickListener(e -> {
             inputField.getElement().executeJs(
-                "if (!('webkitSpeechRecognition' in window)) { alert('Browser Error'); } " +
-                "else { var recognition = new webkitSpeechRecognition(); recognition.lang = 'de-DE'; " +
-                "recognition.onresult = function(event) { $0.value = event.results[0][0].transcript; " +
-                "$0.dispatchEvent(new Event('input', { bubbles: true })); }; recognition.start(); }", 
-                inputField.getElement());
+                    "if (!('webkitSpeechRecognition' in window)) {" +
+                            "  alert('Dein Browser unterstützt keine Spracherkennung');" +
+                            "} else {" +
+                            "  var recognition = new webkitSpeechRecognition();" +
+                            "  recognition.lang = 'de-DE';" +
+                            "  recognition.interimResults = false;" +
+                            "  recognition.maxAlternatives = 1;" +
+                            "  recognition.onresult = function(event) {" +
+                            "    let text = event.results[0][0].transcript;" +
+                            "    $0.value = text;" +
+                            "    $0.dispatchEvent(new Event('input', { bubbles: true }));" +   // wichtig für Vaadin
+                            "    $0.dispatchEvent(new Event('change', { bubbles: true }));" + // extra, falls nötig
+                            "  };" +
+                            "  recognition.start();" +
+                            "}"
+                    , inputField.getElement());
         });
 
-        inputLayout.add(inputField, sendButton, micButton);
+        inputLayout.add(inputField, sendButton , micButton);
         inputLayout.setFlexGrow(1, inputField);
 
-        // --- Sende-Logik mit Markdown-Support ---
+
+
+        // Klick-Listener: Anfrage an Backend senden
         sendButton.addClickListener(e -> {
             String query = inputField.getValue().trim();
             if (!query.isEmpty()) {
-                if (messageArea.getChildren().anyMatch(c -> c == placeholder)) {
-                    messageArea.remove(placeholder);
-                }
+                String jsonResponse = callBackend(query);
 
-                // User Frage
-                Div userMsg = new Div();
-                userMsg.setText("User Frage: " + query);
-                userMsg.getStyle().set("font-weight", "bold").set("margin-bottom", "10px");
-                messageArea.add(userMsg);
+                // Nutzer-Nachricht anzeigen
+                Div userMessage = new Div();
+                userMessage.setText("User Frage :" + query);
+                userMessage.getStyle().set("font-weight", "bold");
+                userMessage.getStyle().set("margin-bottom", "5px");
+                messageArea.add(userMessage);
 
-                // Antwort holen und rendern
-                String rawAnswer = callBackend(query);
-                String htmlAnswer = convertMarkdownToHtml(rawAnswer);
+                // Bot-Antwort anzeigen
+                Div botMessage = new Div();
+                botMessage.setText("Antwort: " + jsonResponse);
+                botMessage.getStyle().set("margin-bottom", "10px");
+                botMessage.getStyle().set("background-color", "#E5E7EB");
+                botMessage.getStyle().set("padding", "5px");
+                botMessage.getStyle().set("border-radius", "5px");
+                messageArea.add(botMessage);
 
-                Div botMsg = new Div();
-                botMsg.addClassName("bot-message-markdown"); // Gleiches Styling wie RagBot
-                botMsg.getElement().setProperty("innerHTML", htmlAnswer);
-                messageArea.add(botMsg);
-
+                // Scrollen nach unten
                 messageArea.getElement().executeJs("this.scrollTop = this.scrollHeight");
+
+                // Eingabefeld leeren
                 inputField.clear();
-                inputField.getElement().executeJs("this.style.height='auto';");
+
+                // Eingabefeld wieder klein machen
+                inputField.getElement().executeJs(
+                        "this.style.height='auto';" +
+                                "this.style.overflowY='hidden';"
+                );
+
+
             } else {
                 Notification.show("Bitte geben Sie eine Frage ein!");
             }
         });
 
+
+        // Alles zum mainLayout hinzufügen
         mainLayout.add(header, chatTitle, messageArea, inputLayout);
         mainLayout.expand(messageArea);
+
+        // Hauptlayout zusammenbauen
         add(navBar, mainLayout);
         setFlexGrow(1, mainLayout);
     }
 
-    // --- Hilfsmethoden (Markdown & Backend) ---
-    private String convertMarkdownToHtml(String markdown) {
-        if (markdown == null || markdown.isEmpty()) return "";
-        Parser parser = Parser.builder().build();
-        Node document = parser.parse(markdown);
-        HtmlRenderer renderer = HtmlRenderer.builder().build();
-        return renderer.render(document);
-    }
 
+
+    // Methode: Anfrage an dein Spring Boot Backend
     private String callBackend(String question) {
         try {
-            // Port 8070 wie in deinem Original
-            String urlString = "http://localhost:8070/askLLM?question=" + URLEncoder.encode(question, StandardCharsets.UTF_8);
+            String urlString = "http://localhost:8070/askLLM?question=" + java.net.URLEncoder.encode(question, "UTF-8");
             URL url = new URL(urlString);
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
             conn.setRequestProperty("Accept", "text/plain");
 
-            BufferedReader in = new BufferedReader(new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8));
+            BufferedReader in = new BufferedReader(new InputStreamReader(conn.getInputStream()));
+            String inputLine;
             StringBuilder response = new StringBuilder();
-            String line;
-            while ((line = in.readLine()) != null) {
-                response.append(line).append("\n");
+
+            while ((inputLine = in.readLine()) != null) {
+                response.append(inputLine);
             }
             in.close();
+            conn.disconnect();
+
             return response.toString();
         } catch (Exception e) {
-            return "**Fehler:** Verbindung zum Server fehlgeschlagen.";
+            e.printStackTrace();
+            return "Fehler beim Abrufen der Antwort vom Backend.";
         }
     }
+
+
 }
